# based

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  bun.lockb  docker-compose.yml  index.html  lefthook.yml  mise.toml  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  TODO.md  biome.json  build.rs  components.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop-native/: Cargo.toml
apps/desktop-native/src/: bindings.rs  db.rs  main.rs  tokio_bridge.rs
apps/desktop-native/src/app/: prefs.rs
apps/desktop-native/src/connection/: lifecycle.rs  mod.rs  persistence.rs  registry.rs
apps/desktop-native/src/mongodb/: change_stream.rs  document_editor.rs  document_viewer.rs  inspector.rs  mod.rs  mutations.rs  pipeline_builder.rs  tree.rs  wizard.rs
apps/desktop-native/src/postgres/: data_viewer.rs  explain.rs  grammar.rs  inspector.rs  live_monitor.rs  mod.rs  mutations.rs  query_editor.rs  tree.rs  wizard.rs
apps/desktop-native/src/project/: based_config.rs  config.rs  mod.rs  queries.rs  variables.rs  watcher.rs
apps/desktop-native/src/settings_window/: mod.rs
apps/desktop-native/src/sqlite/: attach_workspace.rs  data_viewer.rs  eqp_viewer.rs  fts_console.rs  inspector.rs  mod.rs  mutations.rs  pragma_browser.rs  query_editor.rs  tree.rs  wizard.rs
apps/desktop-native/src/theme/: based_theme.json
apps/desktop-native/src/widgets/: cell_detail.rs  mod.rs  status_glyph.rs  tree.rs  ui.rs  virtual_table.rs
apps/desktop-native/src/workspace/: item.rs  mod.rs  notify.rs  object_info.rs  pop_out.rs  sidebar.rs  status_bar.rs  topbar.rs  welcome.rs
apps/desktop/assets/: updater-key.pub
apps/desktop/src/: assets.rs  bindings.rs  bindings.ts  commands.ts  db.rs  fonts.rs  index.css  main.rs  main.tsx  routeTree.gen.ts  test-setup.ts  utils.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: address.rs  connection_id.rs  connection_pool.rs  error.rs  file_watcher.rs  lib.rs  main.rs  project_commands.rs  project_db_commands.rs  project_types.rs  query_registry.rs  schema_cache.rs  variables.rs  window_manager.rs
apps/desktop/src/about_window/: mod.rs
apps/desktop/src/app/: actions.rs  aux_windows.rs  globals.rs  launch.rs  mod.rs  prefs.rs  quit.rs  restart.rs  shell.rs
apps/desktop/src/command_palette/: actions.rs  format.rs  mod.rs  render.rs  search.rs  selection.rs  types.rs
apps/desktop/src/components/: code-editor.tsx  command-palette.tsx  data-table-pagination.tsx  data-table.tsx  error-boundary.tsx  mode-toggle.tsx  new-connection-dialog.tsx  password-input.tsx  select-file.tsx  virtual-data-table.tsx
apps/desktop/src/connection/: descriptor.rs  mod.rs  open.rs  persistence.rs  registry.rs
apps/desktop/src/db/: column_catalog.rs
apps/desktop/src/editor/: context.rs  mod.rs  schema_cache.rs  variable_scope.rs
apps/desktop/src/hooks/: use-cli-args.ts  use-row-mutations.ts  use-titlebar.ts  use-window.ts  use-workspace.ts
apps/desktop/src/lib/: export.ts  filter-utils.ts  query-keys.ts
apps/desktop/src/mongodb/: change_stream.rs  document_editor.rs  document_viewer.rs  inspector.rs  mod.rs  mutations.rs  pipeline_builder.rs  tab_dispatch.rs  tree.rs  wizard.rs
apps/desktop/src/mutations/: edit-connection.ts  remove-connection.ts
apps/desktop/src/onboarding_window/: mod.rs
apps/desktop/src/postgres/: data_viewer.rs  explain.rs  explain_plan.rs  inspector.rs  live_monitor.rs  mod.rs  mutations.rs  query_editor.rs  tab_dispatch.rs  tree.rs  wizard.rs
apps/desktop/src/project/: context.rs  discovery.rs  loader.rs  mod.rs  open.rs  pick.rs  reload.rs  settings.rs  variables.rs  watcher.rs
apps/desktop/src/queries/: connection-list.ts
apps/desktop/src/query_store/: history.rs  mod.rs  saved.rs
apps/desktop/src/routes/: conn.$id.tsx  index.tsx  project.$projectId.tsx
apps/desktop/src/settings_window/: mod.rs
apps/desktop/src/sqlite/: attach_workspace.rs  data_viewer.rs  eqp_parse.rs  eqp_viewer.rs  fts_console.rs  inspector.rs  mod.rs  mutations.rs  pragma_browser.rs  query_editor.rs  tab_dispatch.rs  tree.rs  wizard.rs
apps/desktop/src/storage/: mod.rs
apps/desktop/src/stores/: db-connections.ts  index.ts  project-state.ts  projects.ts  query-files.ts  query-history-store.test.ts  query-history-store.ts  query-history.ts  query-registry-store.test.ts  query-registry-store.ts  row-mutations-store.ts  store-config.ts  tabs-store.test.ts  tabs-store.ts  user-prefs-store.ts
apps/desktop/src/theme/: based_theme.json  controls.rs  mod.rs  presets.rs
apps/desktop/src/types/: project.ts
crates/based-core/: Cargo.toml
crates/based-core/src/: auth.rs  connection_error.rs  connection_id.rs  engine.rs  lib.rs  session.rs  tab.rs
crates/based-mongo/: Cargo.toml
crates/based-mongo/src/: client.rs  config.rs  lib.rs  mutations.rs
crates/based-postgres/: Cargo.toml
crates/based-postgres/src/: config.rs  explain.rs  lib.rs  mutations.rs
crates/based-project/: Cargo.toml
crates/based-project/src/: connection.rs  env_value.rs  environment.rs  favorites.rs  lib.rs  load.rs  project.rs  query.rs  target.rs  walk.rs
crates/based-project/tests/: load_project.rs
crates/based-query/: Cargo.toml
crates/based-query/src/: history.rs  lib.rs  resolve.rs  saved.rs  sql.rs  variables.rs
crates/based-sqlite/: Cargo.toml
crates/based-sqlite/src/: config.rs  lib.rs  mutations.rs
crates/based-storage/: Cargo.toml
crates/based-storage/migrations/: 0001_initial.sql
crates/based-storage/src/: lib.rs  migrate.rs  paths.rs  secrets.rs  session_keys.rs  store.rs
crates/based-workspace/: Cargo.toml
crates/based-workspace/src/: lib.rs  model.rs  resolve.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  connection_pool.rs  db_pool.rs  error.rs  lib.rs
src-tauri/src/decode/: mod.rs  sqlite.rs
(+376 files in other folders)
