[workspace]
members = [
    "apps/desktop",
    "crates/based-core",
    "crates/based-mongo",
    "crates/based-postgres",
    "crates/based-project",
    "crates/based-sqlite",
    "crates/based-storage",
    "crates/based-workspace",
]
resolver = "3"

# Shared GPUI ecosystem dependencies — pinned to what gpui-component v0.5.1 uses.
# Re-pin only between phases; never mid-phase.
[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    "tree-sitter-sql",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
# Same git rev as gpui / gpui_platform — bridges Tokio futures to GPUI tasks (see gpui_tokio::init).
gpui_tokio = { git = "https://github.com/zed-industries/zed", package = "gpui_tokio" }

# Common third-party
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["serde-well-known"] }
notify = "7"
toml = "0.8"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "time",
    "tls-rustls",
] }
futures = "0.3"
rand = "0.9"
dirs = "6"
tempfile = "3"
mongodb = { version = "2", features = ["tokio-runtime"] }

# Required patch for stacker compatibility (used transitively by gpui)
[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", rev = "1d45da4653e1d6e5d273cf20e215b372d84ade5e" }

# Performance-critical rendering crates benefit from full optimisation even in dev.
[profile.dev]
debug = "limited"
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_tokio = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
ropey = { opt-level = 3 }

[profile.release]
lto = "thin"
codegen-units = 1
