[package]
name = "desktop"
# Permanent sentinel: CI rewrites this in-memory at build time via
# `script/set-version.py` so the binary reports the real CalVer release
# version (e.g. 2026.5.1). Local builds intentionally report `0.0.0-dev`.
# Months are non-zero-padded (1-12) because Cargo enforces strict SemVer
# and forbids leading zeros on numeric components.
version = "0.0.0-dev"
edition = "2024"
description = "based — Git-Friendly Database Client (native GPUI build)"
homepage = "https://github.com/pavi2410/based"
license = "MIT"
publish = false

[[bin]]
name = "based"
path = "src/main.rs"

[package.metadata.packager]
product-name = "Based"
identifier = "com.pavi2410.based"
publisher = "pavi2410"
out-dir = "dist"
category = "DeveloperTool"
icons = [
  "assets/icon.png",
  "assets/icon@2x.png",
]

[package.metadata.packager.macos]
minimum-system-version = "13.0"
# Ad-hoc sign the .app bundle so Apple Silicon Gatekeeper does not treat the
# linker-signed binary + unsigned bundle as "damaged" (no GUI bypass). Still
# not a Developer ID build — first launch may show an unverified-developer prompt.
signing_identity = "-"

[package.metadata.packager.linux]
generate-desktop-entry = true

[package.metadata.packager.deb]
depends = [
  "libssl3",
  "libfontconfig1",
  "libvulkan1",
  "libwayland-client0",
]

[dependencies]
based-core = { path = "../../crates/based-core" }
based-mongo = { path = "../../crates/based-mongo" }
based-project = { path = "../../crates/based-project" }
based-query = { path = "../../crates/based-query" }
based-postgres = { path = "../../crates/based-postgres" }
based-sqlite = { path = "../../crates/based-sqlite" }
based-storage = { path = "../../crates/based-storage" }
based-workspace = { path = "../../crates/based-workspace" }

# GPUI ecosystem — versions flow from workspace Cargo.toml
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
gpui_tokio.workspace = true

# General utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
time.workspace = true
uuid.workspace = true
futures.workspace = true
log.workspace = true
env_logger = "0.11"
dirs.workspace = true
rust-embed = "8"
cargo-packager-updater = "0.2"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# Project / config / state
toml.workspace = true
notify.workspace = true
rfd.workspace = true

# DB engines — all three included so Phase 3/4/5 modules compile without
# touching the workspace Cargo.toml again.
sqlx.workspace = true
mongodb.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gpui_platform = { workspace = true, features = ["x11", "wayland"] }

[lints.clippy]
# Match gpui-component's lint profile
arc_with_non_send_sync = "allow"
type_complexity = "allow"

[dev-dependencies]
tempfile.workspace = true
