[package]
name = "based-postgres"
version = "0.0.0-dev"
edition = "2024"
description = "PostgreSQL driver logic for Based (sqlx, no UI)"
license = "MIT"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
