[package]
name = "based-project"
version = "0.0.0-dev"
edition = "2024"
description = "Load and validate the .based/ project format"
license = "MIT"
publish = false

[dependencies]
based-core = { path = "../based-core" }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
