[package]
name = "based"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "based_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "postgres", "time", "chrono", "tls-rustls"] }
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
time = "0.3.36"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["sync"] }
toml = "0.8"
serde_yaml = "0.9"
regex = "1.11"
walkdir = "2.5"
notify = "6.1"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-decorum = "1"
